# backend/openapi.json
@@ -954,6 +954,16 @@
               "type": "string",
               "title": "Cell Id"
             }
+          },
+          {
+            "name": "draw_scale_bar",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Draw Scale Bar"
+            }
           }
         ],
         "responses": {
